...
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="lfD-AH-zhf">
                                <rect key="frame" x="39" y="40" width="297" height="30"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4CW-0g-fUv">
                                        <rect key="frame" x="0.0" y="0.0" width="49" height="30"/>
                                        <state key="normal" title="Square"/>
                                        <connections>
                                            <action selector="squareButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dSq-vA-q45"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qh8-V3-S3h">
                                        <rect key="frame" x="79" y="0.0" width="37" height="30"/>
                                        <state key="normal" title="Cube"/>
                                        <connections>
                                            <action selector="CubeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="OTe-Ri-yKh"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Xse-9h-Awp">
                                        <rect key="frame" x="146" y="0.0" width="85" height="30"/>
                                        <state key="normal" title="Square Root"/>
                                        <connections>
                                            <action selector="squareRootButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="TrK-xc-XIU"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4V-fg-hzK">
                                        <rect key="frame" x="261" y="0.0" width="36" height="30"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jtp-S9-San">
                                <rect key="frame" x="94" y="110" width="187.5" height="30"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="InputTextField"/>
                                </userDefinedRuntimeAttributes>
                            </textField>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W0h-hJ-SMg">
                                <rect key="frame" x="187" y="334" width="0.0" height="0.0"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
...
